<resources>
    <string name="app_name">Mad</string>
    <string name="welcome1">Wel Come</string>
    <string name="welcome">Wel Come</string>
    <string name="Text1">Wel Come</string>
    <string name="regbutton">Sign in / Register</string>
    <string name="reg">Sign in / Register</string>
    <string name="delevery">Delevery</string>
    <string name="location">Enter your delivery location</string>
    <string name="deals">Our most Populer Deals</string>
    <string name="veiw">View all deals</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title">Pizza Mat</string>
    <string name="newTitle">Pizza Mat</string>
    <string name="Discr">LET\'S START YOUR ORDER</string>
    <string name="userName">User Name *</string>
    <string name="name">Mobile(Ex: 777123456)/Email</string>
    <string name="pass">Password *</string>
    <string name="password1">Password</string>
    <string name="check1">Remember me</string>
    <string name="loginbtn">Log In</string>
    <string name="newAcc">Create an account</string>
    <string name="Title1">Pizza Mat</string>
    <string name="newmeb">BECOME A MEMBER</string>
    <string name="fName">First Name *</string>
    <string name="name1">First Name *</string>
    <string name="FName">First Name *</string>
    <string name="Lname">Last Name *</string>
    <string name="phone1">Phone *</string>
    <string name="email1">Email *</string>
    <string name="pass1">Password *</string>
    <string name="confirm">Confirm Password *</string>
    <string name="register">Register</string>
    <string name="Vtitle">Pizza Mat</string>
    <string name="ver1">VERIFICATION CODE</string>
    <string name="vEmail">Email *</string>
    <string name="Exemail">abc@d.com</string>
    <string name="Vcode">Verification Code *</string>
    <string name="Exvcode">Zajh@34</string>
    <string name="Verify1">VERIFY EMAIL</string>
    <string name="Vswit">SWITCH TO VERIFY MOBILE</string>
    <string name="Discpt">Pleace check your email and verify your email address.</string>

</resources>
